5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1752_3092.log
== TEST (2019-05-16 16:21:09) 
-- CODE:
v=input("qual o resultado: ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
k=k+s
print(k)
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:24) 
-- CODE:
v=input("qual o resultado: ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
k=k+s
print(k)
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:02) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s

print(k)
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:19) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s

print(k)
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:21) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s
	v=input("")
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:27) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s
	v=input(" ")
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:53) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper=="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s
	v=input(" ")
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:56) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper=="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s
	v=input(" ")
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:08) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s
	v=input(" ")
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:39) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	k=k+s
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	v=input(" ")
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:06) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	k=k+s
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	v=input(" ")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:14) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	k=k+s
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	v=input(" ")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:16) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	k=k+s
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	
	print(k)
-- OUTPUT:
0
3
9
18
30
45
63
84
108
135
165
198
234
273
315
360
408
459
513
570
630
693
759
828
900
975
1053
1134
1218
1305
1395
1488
1584
1683
1785
1890
1998
2109
2223
2340
2460
2583
2709
2838
2970
3105
3243
3384
3528
3675
3825
3978
4134
4293
4455
4620
4788
4959
5133
5310
5490
5673
5859
6048
6240
6435
6633
6834
7038
7245
7455
7668
7884
8103
8325
8550
8778
9009
9243
9480
9720
9963
10209
10458
10710
10965
11223
11484
11748
12015
12285
12558
12834
13113
13395
13680
13968
14259
14553
14850
15150
15453
15759
16068
16380
16695
17013
17334
17658
17985
18315
18648
18984
19323
19665
20010
20358
20709
21063
21420
21780
22143
22509
22878
23250
23625
24003
24384
24768
25155
25545
25938
26334
26733
27135
27540
27948
28359
28773
29190
29610
30033
30459
30888
31320
31755
32193
32634
33078
33525
33975
34428
34884
35343
35805
36270
36738
37209
37683
38160
38640
39123
39609
40098
40590
41085
41583
42084
42588
43095
43605
44118
44634
45153
45675
46200
46728
47259
47793
48330
48870
49413
49959
50508
51060
51615
521
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:35:03) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	k=k+s
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	v=input("")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:36:06) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	elif(v.upper()=="E"):
		s=s+2
	elif(v.upper()=="D"):
		s=s+1
	k=k+s
	v=input("")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:36:42) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	else:
		if(v.upper()=="E"):
			s=s+2
		else:
			if(v.upper()=="D"):
				s=s+1
	k=k+s
	v=input("")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:07) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	else:
		if(v.upper()=="E"):
			s=s+2
		else:
			if(v.upper()=="D"):
				s=s+1
	k=s
	v=input("")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:12) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	else:
		if(v.upper()=="E"):
			s=s+2
		else:
			if(v.upper()=="D"):
				s=s+1
	k=s
	
	v=input("")
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:25) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	else:
		if(v.upper()=="E"):
			s=s+2
		else:
			if(v.upper()=="D"):
				s=s+1
k=s
	
	v=input("")
	print(k)
-- ERROR:
File "XXXX", line 19
    v=input("")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:40) 
-- CODE:
v=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	else:
		if(v.upper()=="E"):
			s=s+2
		else:
			if(v.upper()=="D"):
				s=s+1
	
	v=input("")
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    v=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:39:08) 
-- CODE:
q=input(" ")
V=3
E=2
D=1

k=0
s=0
while(v.upper!="X"):
	if(v.upper()=="V"):
		s=s+3
	else:
		if(v.upper()=="E"):
			s=s+2
		else:
			if(v.upper()=="D"):
				s=s+1
	q=input("")
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(v.upper!="X"):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:39:27) 
-- CODE:
q=input(" ")
V=3
E=2
D=1

k=0
s=0
while(q.upper!="X"):
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	q=input("")
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    q=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:02) 
-- CODE:
q=input(" ")
V=3
E=2
D=1

k=0
s=0
while(q.upper!="X"):
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	q=input("")
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    q=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:39) 
-- CODE:
q=input(" ")
V=3
E=2
D=1

k=0
s=0
while(q.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:37) 
-- CODE:
q=input(" ")
V=3
E=2
D=1

k=0
s=0
while(q.upper!="X"):
	q.upper()=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	k=s
	print(k)
-- ERROR:
File "XXXX", line 9
    q.upper()=input("")
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:09) 
-- CODE:
q=input(" ")
V=3
E=2
D=1

k=0
s=0
while(g.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	g=q
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(g.upper!="X"):
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:18) 
-- CODE:
q=input(" ")
V=3
E=2
D=1
g=q
k=0
s=0
while(g.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	g=q
	k=s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:43:36) 
-- CODE:
q=input(" ")
V=3
E=2
D=1
g=q
k=0
s=0
while(g.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	g=q
	k=s
	print(k)
-- EXECUTION TIME:
0.150314
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3092/main.py", line 9, in <module>
    q=input("")
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:46) 
-- CODE:
q=input(" ")
V=3
E=2
D=1
g=q
k=0
s=0
while(g.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	g=q
	k=s/100
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:44:37) 
-- CODE:
q=input(" ")
V=3
E=2
D=1
g=q
k=0
s=0
while(g.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	g=q
	k=s/100
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=input("")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:44:38) 
-- CODE:
q=input(" ")
V=3
E=2
D=1
g=q
k=0
s=0
while(g.upper!="X"):
	q=input("")
	if(q.upper()=="V"):
		s=s+3
	else:
		if(q.upper()=="E"):
			s=s+2
		else:
			if(q.upper()=="D"):
				s=s+1
	g=q
	k=s/100
print(k)
-- EXECUTION TIME:
0.172313
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3092/main.py", line 9, in <module>
    q=input("")
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
